--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       left: 0px;
       width: 100%;
       height: 100%;
-      font-family: sans;
+      font-family: "Microsoft JhengHei";
       padding: 0px;
       margin: 0px;
       border: 0px;
@@ -54,7 +54,6 @@
       left: 0px;
       font-size: 30px;
       white-space: pre;
-      font-family: sans;
       border: 0px;
       padding: 0.1em;
       margin: 0px;
